--- a/SweetSerenityBySarah/Views/Partials/Account/PaymentForm.cshtml
+++ b/SweetSerenityBySarah/Views/Partials/Account/PaymentForm.cshtml
@@ -6,7 +6,7 @@
     </h4>
     <hr>
 
-    using (Html.BeginUmbracoForm("LoginSubmit", "AccountSurface", FormMethod.Post, new { @class = "form-horizontal", role = "form", id = "cardDetailsForm" }))
+    using (Html.BeginUmbracoForm("ProcessPayment", "PaymentSurface", FormMethod.Post, new { @class = "form-horizontal", role = "form", id = "cardDetailsForm" }))
         {
         <div id="cardInformation" class="cardInformation">
             <section id="validationError" class="alert alert-danger">
