Updated stripe intergrated payment form

--- a/SweetSerenityBySarah/Views/AccountPage.cshtml
+++ b/SweetSerenityBySarah/Views/AccountPage.cshtml
@@ -39,8 +39,8 @@
                                 }
 
                             <div class="col-lg-12">
-                                @*@Html.Action("PaymentForm", "PaymentSurface")*@
-                                @Html.Partial("Account/PaymentForm")
+                                @Html.Action("PaymentForm", "PaymentSurface")
+                                @*@Html.Partial("Account/PaymentForm")*@
                             </div>
 
                             @Html.Partial("Account/PaymentsList")
