--- a/SweetSerenityBySarah/Views/Partials/Account/PaymentForm.cshtml
+++ b/SweetSerenityBySarah/Views/Partials/Account/PaymentForm.cshtml
@@ -1,13 +1,10 @@
 ﻿@using SweetSerenityBySarah
 @using SweetSerenityBySarah.Models
-@inherits UmbracoTemplatePage
-@*@model SweetSerenityBySarah.Models.PaymentFormModel*@
+@model SweetSerenityBySarah.Models.PaymentFormModel
 @{
-    
-    var model = new PaymentFormModel();
-    var siteSetting = Umbraco.TypedContentAtRoot().FirstOrDefault(x => x.ContentType.Alias == "GlobalSettings");
-    var publishAPIKey = PaymentService.GetPublishApiKey(siteSetting);
-    
+
+    //var model = new PaymentFormModel();
+
     <hr>
     <h4 class="intro-text text-center">
         Payment Details...
@@ -17,24 +14,39 @@
     using (Html.BeginUmbracoForm("ProcessPaymentForm", "PaymentSurface", FormMethod.Post, new { @class = "form-horizontal", role = "form", id = "cardDetailsForm" }))
         {
 
+        if (Model.IsUserAdmin)
+            {
+            <div class="form-group">
+                @Html.LabelFor(m => m.MemberId, new { @class = "control-label col-sm-4" })
+
+                <div class="col-sm-8">
+                    @Html.DropDownListFor(m => m.MemberId, new SelectList(Model.SiteMembers, "Id", "Email"), new { @class = "form-control" })
+                </div>
+            </div>
+            }
+
         <div class="form-group">
-            @Html.LabelFor(m => model.PaymentAmount, new { @class = "control-label col-sm-4" })
+            @Html.LabelFor(m => m.PaymentAmount, new { @class = "control-label col-sm-4" })
 
             <div class="col-sm-4">
-                @Html.TextBoxFor(m => model.PaymentAmount, new {@class = "form-control", required = "", placeholder = "Enter the amount you wish to pay"})
-                @Html.ValidationMessageFor(m => model.PaymentAmount, "", new {@class = "text-danger"})
+                @Html.TextBoxFor(m => m.PaymentAmount, new { @class = "form-control", required = "", placeholder = "Enter the amount you wish to pay" })
+                @Html.ValidationMessageFor(m => m.PaymentAmount, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group col-sm-4 text-right">
-                <script src="https://checkout.stripe.com/checkout.js" 
+                <script src="https://checkout.stripe.com/checkout.js"
                         class="stripe-button"
-                        data-key="@publishAPIKey"
-                        data-amount="999"
+                        data-key="@Model.PublishApiKey"
+                        data-amount="@Model.PaymentAmount"
+                        data-email="@Model.MemberEmailAddress"
                         data-name="Sweet Serenity by Sarah"
-                        data-description="Widget"
-                        data-image="/img/documentation/checkout/marketplace.png"
+                        data-description="Treatment payment"
+                        data-billing-address="true"
+                        data-image="/Images/SSS_Logo_Square.png"
                         data-locale="auto"
-                        data-currency="aud">
+                        data-currency="aud"
+                        data-label="Card Payment">
+
 
                 </script>
             </div>
@@ -90,4 +102,4 @@
                 </div>
             </div>*@
         }
-        }
+}
